fixed clipping images

--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ body {
 .card-container img {
     width: 250px;
     height: 400px;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 0%;
 }
 
@@ -139,7 +139,7 @@ body {
     background: var(--lightBlue);
     box-shadow: 0 0 5px rgba(0,0,0,.4);
     text-align: center;
-    padding: 20px 0px;
+    padding: 0px 0px 20px 0px;
     border-radius: 20px;
 }
 
